implement logout using AccountService

--- a/UserService/UserService.IdentityServer/Pages/Account/Logout/Index.cshtml
+++ b/UserService/UserService.IdentityServer/Pages/Account/Logout/Index.cshtml
@@ -1,5 +1,5 @@
 @page
-@model UserService.IdentityServer.Pages.Logout.Index
+@model UserService.IdentityServer.Pages.Account.Logout.Index
 
 <div class="logout-page">
     <div class="lead">
