--- a/UserService/UserService.IdentityServer/Pages/Account/Create/Index.cshtml
+++ b/UserService/UserService.IdentityServer/Pages/Account/Create/Index.cshtml
@@ -1,4 +1,5 @@
 @page
+@using UserService.Business.Constants
 @model UserService.IdentityServer.Pages.Account.Create.Index
 
 <div class="login-page">
@@ -11,7 +12,7 @@
     <div class="row">
 
         <div class="col-sm-6">
-            <form asp-page="/Account/Create/Index">
+            <form asp-page="@RouteConstants.AccountCreate">
                 <input type="hidden" asp-for="Input.ReturnUrl"/>
 
                 <div class="form-group">
