--- a/UserService/UserService.IdentityServer/Pages/Account/Login/Index.cshtml
+++ b/UserService/UserService.IdentityServer/Pages/Account/Login/Index.cshtml
@@ -1,4 +1,5 @@
 @page
+@using UserService.Business.Constants
 @model UserService.IdentityServer.Pages.Account.Login.Index
 
 <div class="login-page">
@@ -16,7 +17,7 @@
                 </div>
 
                 <div class="card-body">
-                    <form asp-page="/Account/Login/Index">
+                    <form asp-page="@RouteConstants.AccountLogin">
                         <input type="hidden" asp-for="Input.ReturnUrl" />
 
                         <div class="form-group">
