--- a/UserService/UserService.IdentityServer/Pages/Account/Logout/Index.cshtml
+++ b/UserService/UserService.IdentityServer/Pages/Account/Logout/Index.cshtml
@@ -1,4 +1,5 @@
 @page
+@using UserService.Business.Constants
 @model UserService.IdentityServer.Pages.Account.Logout.Index
 
 <div class="logout-page">
@@ -7,7 +8,7 @@
         <p>Would you like to logout of IdentityServer?</p>
     </div>
 
-    <form asp-page="/Account/Logout/Index">
+    <form asp-page="@RouteConstants.AccountLogout">
         <input type="hidden" name="logoutId" value="@Model.LogoutId"/>
 
         <div class="form-group">
