--- a/UserService/UserService.IdentityServer/Pages/Ciba/Consent.cshtml
+++ b/UserService/UserService.IdentityServer/Pages/Ciba/Consent.cshtml
@@ -1,4 +1,5 @@
 @page
+@using UserService.Business.Constants
 @model UserService.IdentityServer.Pages.Ciba.Consent
 @{
 }
@@ -27,7 +28,7 @@
         </div>
     </div>
 
-    <form asp-page="/Ciba/Consent">
+    <form asp-page="@RouteConstants.CibaConsent">
         <input type="hidden" asp-for="Input.Id"/>
         <div class="row">
             <div class="col-sm-8">
