--- a/UserService/UserService.IdentityServer/Pages/Device/Index.cshtml
+++ b/UserService/UserService.IdentityServer/Pages/Device/Index.cshtml
@@ -1,4 +1,5 @@
 @page
+@using UserService.Business.Constants
 @model UserService.IdentityServer.Pages.Device.Index
 @{
 }
@@ -20,7 +21,7 @@
 
         <div class="row">
             <div class="col-sm-6">
-                <form asp-page="/Device/Index" method="get">
+                <form asp-page=@RouteConstants.DeviceIndex method="get">
                     <div class="form-group">
                         <label for="userCode">User Code:</label>
                         <input class="form-control" id="userCode" name="userCode" autofocus/>
@@ -57,7 +58,7 @@ else
             </div>
         </div>
 
-        <form asp-page="/Device/Index">
+        <form asp-page=@RouteConstants.DeviceIndex>
             <input asp-for="Input.UserCode" type="hidden"/>
             <div class="row">
                 <div class="col-sm-8">
