--- a/UserService/UserService.IdentityServer/Pages/ServerSideSessions/Index.cshtml
+++ b/UserService/UserService.IdentityServer/Pages/ServerSideSessions/Index.cshtml
@@ -1,4 +1,5 @@
 @page
+@using UserService.Business.Constants
 @model UserService.IdentityServer.Pages.ServerSideSessions.IndexModel
 
 <div class="users-page">
@@ -17,7 +18,7 @@
                             <div class="col-1 text-center">
                                 @if (Model.UserSessions.HasPrevResults)
                                 {
-                                    <a class="btn btn-primary" asp-page="/ServerSideSessions/Index"
+                                    <a class="btn btn-primary" asp-page=@RouteConstants.ServerSideSessionsIndex
                                        asp-route-prev="true"
                                        asp-route-token="@Model.UserSessions.ResultsToken"
                                        asp-route-DisplayNameFilter="@Model.DisplayNameFilter"
@@ -49,7 +50,7 @@
                             <div class="col-1 text-center">
                                 @if (Model.UserSessions.HasNextResults)
                                 {
-                                    <a class="btn btn-primary" asp-page="/ServerSideSessions/Index"
+                                    <a class="btn btn-primary" asp-page=@RouteConstants.ServerSideSessionsIndex
                                        asp-route-token="@Model.UserSessions.ResultsToken"
                                        asp-route-DisplayNameFilter="@Model.DisplayNameFilter"
                                        asp-route-SubjectIdFilter="@Model.SubjectIdFilter"
