--- a/UserService/UserService.IdentityServer/Pages/Shared/_Nav.cshtml
+++ b/UserService/UserService.IdentityServer/Pages/Shared/_Nav.cshtml
@@ -1,4 +1,5 @@
 @using Duende.IdentityServer.Extensions
+@using UserService.Business.Constants
 @{
 #nullable enable
     string? name = null;
@@ -25,7 +26,7 @@
                     </a>
 
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" asp-page="/Account/Logout/Index">Logout</a>
+                        <a class="dropdown-item" asp-page=@RouteConstants.AccountLogout>Logout</a>
                     </div>
                 </li>
             </ul>
